fix: cant get userInfo after login
